Add README, adjust settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.html": "html",
         "iostream": "cpp",
-        "test.C": "cpp"
+        "test.C": "cpp",
+        "stdio.h": "c"
     }
 }
