--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,26 @@
 {
+    "editor.formatOnSave": true,
+    // Disable formatting and intellisense engine in Microsoft C/C++ extension (provides debugging)
+    // This way you can have the other features of the extension but use clangd for LSP
+    "C_Cpp.formatting": "disabled",
+    "C_Cpp.intelliSenseEngine": "default",
+    // Configure .clangd arguments
+    "clangd.checkUpdates": true,
+    "clangd.onConfigChanged": "restart",
+    "clangd.arguments": [
+        // --background-index              - Index project code in the background and persist index on disk.
+        "-background-index",
+        // --header-insertion=<value>      - Add #include directives when accepting code completions
+        //  =iwyu                          -   Include what you use. Insert the owning header for top-level symbols, unless the header is already directly included or the symbol is forward-declared
+        //  =never                         -   Never insert #include directives as part of code completion
+        "-header-insertion=iwyu",
+        // --header-insertion-decorators   - Prepend a circular dot or space before the completion label, depending on whether an include line will be inserted or not
+        "-header-insertion-decorators",
+        // --inlay-hints                   - Enable preview of InlayHints feature
+        "--inlay-hints",
+        // --function-arg-placeholders     - When disabled, completions contain only parentheses for function calls. When enabled, completions also contain placeholders for method parameters
+        "--function-arg-placeholders",
+    ],
     "files.associations": {
         "*.html": "html",
         "iostream": "cpp",
